Fix checkbox alignment in the grid

--- a/src/main/resources/assets/styles/browse/archive-browse-panel.less
+++ b/src/main/resources/assets/styles/browse/archive-browse-panel.less
@@ -13,10 +13,6 @@
 
   .tree-grid-toolbar {
     margin-top: 0;
-
-    .selection-controller {
-      padding-left: 11px;
-    }
   }
 
   .archive-tree-list {
